crates/cairn-lang-tree-sitter/test/corpus/assert.txt
==================
Truth table (field labels)
==================

struct s size=3x3
  assert truth(sig.a, sig.b -> sig.out) { 00->0; 01->1; 10->1; 11->1 }

---

(source_file
  (struct_decl
    name: (identifier)
    args: (attribute_list
      (attribute
        key: (identifier)
        value: (size_literal
          (integer)
          (integer))))
    body: (struct_body
      (assert_stmt
        (truth_form
          inputs: (signal_list
            (signal_ref
              (identifier)
              (identifier))
            (signal_ref
              (identifier)
              (identifier)))
          output: (signal_ref
            (identifier)
            (identifier))
          (truth_row
            inputs: (bit_pattern)
            output: (bit))
          (truth_row
            inputs: (bit_pattern)
            output: (bit))
          (truth_row
            inputs: (bit_pattern)
            output: (bit))
          (truth_row
            inputs: (bit_pattern)
            output: (bit)))))))

==================
Temporal assertion (field labels)
==================

struct s size=3x3
  assert always(sig.step -> eventually sig.open within 2)

---

(source_file
  (struct_decl
    name: (identifier)
    args: (attribute_list
      (attribute
        key: (identifier)
        value: (size_literal
          (integer)
          (integer))))
    body: (struct_body
      (assert_stmt
        (temporal_form
          (temporal_expr
            trigger: (signal_ref
              (identifier)
              (identifier))
            target: (signal_ref
              (identifier)
              (identifier))
            bound: (integer)))))))

==================
Truth table and temporal assertion with bare identifiers (degenerate dotted refs)
==================

struct s size=3x3
  assert truth(a, b -> out) { 00->0; 01->1; 10->1; 11->1 }
  assert always(step -> eventually open within 2)

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute
        (identifier)
        (size_literal
          (integer)
          (integer))))
    (struct_body
      (assert_stmt
        (truth_form
          (signal_list
            (identifier)
            (identifier))
          (identifier)
          (truth_row
            (bit_pattern)
            (bit))
          (truth_row
            (bit_pattern)
            (bit))
          (truth_row
            (bit_pattern)
            (bit))
          (truth_row
            (bit_pattern)
            (bit))))
      (assert_stmt
        (temporal_form
          (temporal_expr
            (identifier)
            (identifier)
            (integer)))))))

==================
Truth table with trailing semicolon
==================

struct s size=3x3
  assert truth(sig.a -> sig.out) { 0->0; 1->1; }

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute
        (identifier)
        (size_literal
          (integer)
          (integer))))
    (struct_body
      (assert_stmt
        (truth_form
          (signal_list
            (signal_ref
              (identifier)
              (identifier)))
          (signal_ref
            (identifier)
            (identifier))
          (truth_row
            (bit_pattern)
            (bit))
          (truth_row
            (bit_pattern)
            (bit)))))))

==================
Truth table with don't-care inputs
==================

struct s size=3x3
  assert truth(sig.a, sig.b, sig.c -> sig.out) { --0->0; 0-1->1; 11- -> 1 }

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute
        (identifier)
        (size_literal
          (integer)
          (integer))))
    (struct_body
      (assert_stmt
        (truth_form
          (signal_list
            (signal_ref
              (identifier)
              (identifier))
            (signal_ref
              (identifier)
              (identifier))
            (signal_ref
              (identifier)
              (identifier)))
          (signal_ref
            (identifier)
            (identifier))
          (truth_row
            (bit_pattern)
            (bit))
          (truth_row
            (bit_pattern)
            (bit))
          (truth_row
            (bit_pattern)
            (bit)))))))

==================
Truth table with a don't-care output
==================

struct s size=3x3
  assert truth(sig.a, sig.b, sig.enable -> sig.out) { 01- -> 1; --0 -> -; 000->- }

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute
        (identifier)
        (size_literal
          (integer)
          (integer))))
    (struct_body
      (assert_stmt
        (truth_form
          (signal_list
            (signal_ref
              (identifier)
              (identifier))
            (signal_ref
              (identifier)
              (identifier))
            (signal_ref
              (identifier)
              (identifier)))
          (signal_ref
            (identifier)
            (identifier))
          (truth_row
            (bit_pattern)
            (bit))
          (truth_row
            (bit_pattern)
            (dont_care))
          (truth_row
            (bit_pattern)
            (dont_care)))))))

==================
Truth output run into the next row is rejected
:error
==================

struct s size=3x3
  assert truth(sig.a, sig.b -> sig.c) { 00->101->0 }

---
