crates/cairn-lang-tree-sitter/test/corpus/comments.txt
==================
Trailing comment on a header and a command line
==================

struct s size=3x3  # header note
  floor mat_slot=floor  # eol note
  walls mat_slot=wall

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute
        (identifier)
        (size_literal
          (integer)
          (integer))))
    (comment)
    (struct_body
      (member_stmt
        (member_keyword)
        (command_arg_list
          (command_arg
            (attribute
              (identifier)
              (identifier)))))
      (comment)
      (member_stmt
        (member_keyword)
        (command_arg_list
          (command_arg
            (attribute
              (identifier)
              (identifier))))))))

==================
Trailing comments and a comment-only line inside a nested scope
==================

struct keep size=5x5
  level id=l0 y=0  # scope note
    # indented comment-only line
    floor mat_slot=floor  # inner note
  walls mat_slot=wall

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute
        (identifier)
        (size_literal
          (integer)
          (integer))))
    (struct_body
      (member_stmt_with_body
        (member_keyword)
        (command_arg_list
          (command_arg
            (attribute
              (identifier)
              (identifier)))
          (command_arg
            (attribute
              (identifier)
              (integer))))
        (comment)
        (struct_body
          (member_stmt
            (member_keyword)
            (command_arg_list
              (command_arg
                (attribute
                  (identifier)
                  (identifier)))))
          (comment)))
      (member_stmt
        (member_keyword)
        (command_arg_list
          (command_arg
            (attribute
              (identifier)
              (identifier))))))))

==================
A comment behind a bodyless declaration is spent, not a node
==================

theme a:
# c

---

(source_file
  (theme_decl
    (identifier)))

==================
A body that is only a comment is spent the same way
==================

struct s size=3x3
  # note

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute
        (identifier)
        (size_literal
          (integer)
          (integer))))))

==================
Blank lines around that comment change nothing
==================

theme a:

# c

---

(source_file
  (theme_decl
    (identifier)))
