crates/cairn-lang-tree-sitter/test/corpus/directives.txt
==================
@cairn version (field labels)
==================

@cairn 2026.06

---

(source_file
  (directive
    name: (directive_name)
    arg: (directive_literal)))

==================
@requires with operator (field labels)
==================

@requires version>=1.20

---

(source_file
  (directive
    name: (directive_name)
    arg: (directive_literal)))

==================
@intended_targets list (field labels)
==================

@intended_targets ["1.20.4","1.21.4"]

---

(source_file
  (directive
    name: (directive_name)
    arg: (string_list
      (string)
      (string))))

==================
@requires bare version, no prefix or operator
==================

@requires 1.20

---

(source_file
  (directive
    (directive_name)
    (directive_literal)))

==================
@requires with < operator
==================

@requires version<1.21

---

(source_file
  (directive
    (directive_name)
    (directive_literal)))

==================
@requires with = operator
==================

@requires version=1.20.4

---

(source_file
  (directive
    (directive_name)
    (directive_literal)))

==================
@requires with <= operator
==================

@requires version<=1.21

---

(source_file
  (directive
    (directive_name)
    (directive_literal)))

==================
@requires with > operator
==================

@requires version>1.19

---

(source_file
  (directive
    (directive_name)
    (directive_literal)))

==================
@requires single-segment version
==================

@requires 1

---

(source_file
  (directive
    (directive_name)
    (directive_literal)))

==================
@cairn four-segment version
==================

@cairn 1.2.3.4

---

(source_file
  (directive
    (directive_name)
    (directive_literal)))

==================
@intended_targets empty list
==================

@intended_targets []

---

(source_file
  (directive
    (directive_name)
    (string_list)))

==================
A directive name is one whole word
:error
==================

@cairnx 2026.06

---

==================
@cairn with an opaque value
==================

@cairn draft

---

(source_file
  (directive
    (directive_name)
    (directive_literal)))
