crates/cairn-lang-tree-sitter/test/corpus/indent.txt
==================
Simple nested block
==================

theme keep:
  slot floor -> @oak
  slot wall -> @stone

---

(source_file
  (theme_decl
    (identifier)
    (theme_body
      (slot_binding (identifier) (material_ref (identifier)))
      (slot_binding (identifier) (material_ref (identifier))))))

==================
Blank line between struct body members
==================

struct keep size=5x5
  floor mat_slot=floor

  walls mat_slot=wall height=3

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute (identifier) (size_literal (integer) (integer))))
    (struct_body
      (member_stmt (member_keyword)
        (command_arg_list (command_arg (attribute (identifier) (identifier)))))
      (member_stmt (member_keyword)
        (command_arg_list
          (command_arg (attribute (identifier) (identifier)))
          (command_arg (attribute (identifier) (integer))))))))

==================
Blank line between top-level declarations
==================

theme keep:
  slot floor -> @oak

struct keep size=5x5
  floor mat_slot=floor

---

(source_file
  (theme_decl
    (identifier)
    (theme_body
      (slot_binding (identifier) (material_ref (identifier)))))
  (struct_decl
    (identifier)
    (attribute_list
      (attribute (identifier) (size_literal (integer) (integer))))
    (struct_body
      (member_stmt (member_keyword)
        (command_arg_list (command_arg (attribute (identifier) (identifier))))))))

==================
Comment-only line between top-level declarations
==================

theme keep:
  slot floor -> @oak
# a comment on its own line
struct keep size=5x5
  floor mat_slot=floor

---

(source_file
  (theme_decl
    (identifier)
    (theme_body
      (slot_binding (identifier) (material_ref (identifier)))))
  (struct_decl
    (identifier)
    (attribute_list
      (attribute (identifier) (size_literal (integer) (integer))))
    (struct_body
      (member_stmt (member_keyword)
        (command_arg_list (command_arg (attribute (identifier) (identifier))))))))
