crates/cairn-lang-tree-sitter/test/corpus/logic.txt
==================
logic with or
==================

struct gatehouse size=7x5
  logic sig.open = sig.step or sig.exit

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute
        (identifier)
        (size_literal
          (integer)
          (integer))))
    (struct_body
      (logic_decl
        (signal_ref
          (identifier)
          (identifier))
        (binary_expression
          (signal_ref
            (identifier)
            (identifier))
          (signal_ref
            (identifier)
            (identifier)))))))

==================
logic with and, not, parens precedence (field labels)
==================

struct sample size=5x5
  logic sig.out = not sig.a and (sig.b or sig.c)

---

(source_file
  (struct_decl
    name: (identifier)
    args: (attribute_list
      (attribute
        key: (identifier)
        value: (size_literal
          (integer)
          (integer))))
    body: (struct_body
      (logic_decl
        name: (signal_ref
          (identifier)
          (identifier))
        value: (binary_expression
          lhs: (unary_expression
            operand: (signal_ref
              (identifier)
              (identifier)))
          rhs: (parenthesized_expression
            (binary_expression
              lhs: (signal_ref
                (identifier)
                (identifier))
              rhs: (signal_ref
                (identifier)
                (identifier)))))))))

==================
logic with bare identifier name (degenerate dotted ref)
==================

struct s size=3x3
  logic flag = sig.a or sig.b

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute
        (identifier)
        (size_literal
          (integer)
          (integer))))
    (struct_body
      (logic_decl
        (identifier)
        (binary_expression
          (signal_ref
            (identifier)
            (identifier))
          (signal_ref
            (identifier)
            (identifier)))))))

==================
Member statement with non-signal_ref arrow output
==================

struct s size=3x3
  pressure_plate id=plate -> 3

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute
        (identifier)
        (size_literal
          (integer)
          (integer))))
    (struct_body
      (member_stmt
        (member_keyword)
        (command_arg_list
          (command_arg
            (attribute
              (identifier)
              (identifier))))
        (integer)))))

==================
Member override with bracket selector (field labels)
==================

struct gatehouse size=7x5
  door id=front side=front at=center
  door[id=front] opened_by=sig.open

---

(source_file
  (struct_decl
    name: (identifier)
    args: (attribute_list
      (attribute
        key: (identifier)
        value: (size_literal
          (integer)
          (integer))))
    body: (struct_body
      (member_stmt
        keyword: (member_keyword)
        args: (command_arg_list
          (command_arg
            (attribute
              key: (identifier)
              value: (identifier)))
          (command_arg
            (attribute
              key: (identifier)
              value: (identifier)))
          (command_arg
            (attribute
              key: (identifier)
              value: (identifier)))))
      (member_stmt
        keyword: (member_keyword)
        selector: (selector
          (filter_list
            (attribute
              key: (identifier)
              value: (identifier))))
        args: (command_arg_list
          (command_arg
            (attribute
              key: (identifier)
              value: (signal_ref
                (identifier)
                (identifier)))))))))

==================
connect with positional signal refs and bare `to`
==================

struct duo size=5x5
  connect west.east_corner to east.west_corner path=@gravel

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute
        (identifier)
        (size_literal
          (integer)
          (integer))))
    (struct_body
      (member_stmt
        (member_keyword)
        (command_arg_list
          (command_arg
            (signal_ref
              (identifier)
              (identifier)))
          (command_arg
            (identifier))
          (command_arg
            (signal_ref
              (identifier)
              (identifier)))
          (command_arg
            (attribute
              (identifier)
              (material_ref
                (identifier)))))))))

==================
A boolean literal is not a logic operand
:error
==================

struct s size=3x3
  logic flag = true and not false

---



==================
An operator is not a signal's name
:error
==================

struct s size=3x3
  logic s.out = a.b and or

---



==================
logic with and binding tighter than or
==================

struct s size=3x3
  logic sig.out = sig.a or sig.b and sig.c

---

(source_file
  (struct_decl
    (identifier)
    (attribute_list
      (attribute
        (identifier)
        (size_literal
          (integer)
          (integer))))
    (struct_body
      (logic_decl
        (signal_ref
          (identifier)
          (identifier))
        (binary_expression
          (signal_ref
            (identifier)
            (identifier))
          (binary_expression
            (signal_ref
              (identifier)
              (identifier))
            (signal_ref
              (identifier)
              (identifier))))))))
